--- a/eqbw/modgui/icon-tap-equalizerbw.html
+++ b/eqbw/modgui/icon-tap-equalizerbw.html
@@ -54,92 +54,92 @@
     <div class="mod-control-group mod-control-group-2 clearfix">
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band1GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band1FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value" mod-role="input-control-value" mod-port-symbol="Band1FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band2GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band2FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band2FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band3GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band3FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band3FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band4GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band4FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band4FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band5GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band5FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band5FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band6GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band6FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band6FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band7GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band7FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band7FreqHz">20.000</div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band8GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band8FreqHz"></div>
             </div>
-            <div class="mod-knob-value">20.000</div>
+            <div class="mod-knob-value"  mod-role="input-control-value" mod-port-symbol="Band8FreqHz">20.000</div>
         </div>
     </div>
     <div class="mod-control-group mod-control-group-3 clearfix">
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band1GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band1BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band2GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band2BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band3GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band3BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band4GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band4BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band5GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band5BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band6GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band6BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band7GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band7BandwidthOctaves"></div>
             </div>
         </div>
         <div class="mod-knob" mod-role="icon-button" mod-button-type="knob">
             <div class="mod-knob-image-wrapper">
-                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band8GainDb"></div>
+                <div class="mod-knob-image" mod-role="input-control-port" mod-port-symbol="Band8BandwidthOctaves"></div>
             </div>
         </div>
     </div>
