eq interface html's fixed

--- a/eq/modgui/icon-tap-equalizer.html
+++ b/eq/modgui/icon-tap-equalizer.html
@@ -137,7 +137,7 @@
 <style type="text/css" media="screen">
     /* MOD EQUALIZER */
     .mod-tap-equalizer {
-        background-image: url(/resources/tap-equalizer-background.png?bundle=tap-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
+        background-image: url(/resources/tap-equalizer-background.png?bundle=tap-lv2-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
         background-position: center center;
         background-repeat: no-repeat;
         color: black;
@@ -221,7 +221,7 @@
         padding: 5px;
     }
     .mod-tap-equalizer .mod-control-group .mod-knob .mod-knob-image {
-        background-image: url(/resources/tap-equalizer-knob.png?bundle=tap-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
+        background-image: url(/resources/tap-equalizer-knob.png?bundle=tap-lv2-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
         background-position: left center;
         background-repeat: no-repeat;
         background-size: auto 50px;
@@ -241,7 +241,7 @@
     }
     /* FOOTSWITCH */
     .mod-tap-equalizer .mod-footswitch {
-        background-image: url(/resources/footswitch.png?bundle=tap-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
+        background-image: url(/resources/footswitch.png?bundle=tap-lv2-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: auto 55px;
@@ -266,10 +266,10 @@
         z-index: 40;
     }
     .mod-tap-equalizer .mod-light.off {
-        background-image: url(/resources/red-light-off.png?bundle=tap-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
+        background-image: url(/resources/red-light-off.png?bundle=tap-lv2-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
     }
     .mod-tap-equalizer .mod-light.on {
-        background-image: url(/resources/red-light-on.png?bundle=tap-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
+        background-image: url(/resources/red-light-on.png?bundle=tap-lv2-eq.lv2&url=http://portalmod.com/plugins/tap/eq);
     }
     
 </style>
