--- a/eqbw/modgui/icon-tap-equalizerbw.html
+++ b/eqbw/modgui/icon-tap-equalizerbw.html
@@ -179,7 +179,7 @@
 <style type="text/css" media="screen">
     /* MOD EQUALIZER */
     .mod-tap-equalizer-bw {
-        background-image: url(/resources/tap-eqbw-background.png?bundle=tap-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
+        background-image: url(/resources/tap-eqbw-background.png?bundle=tap-lv2-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
         background-position: center center;
         background-repeat: no-repeat;
         color: black;
@@ -272,7 +272,7 @@
         border-radius: 0 0 8px 8px;
     }
     .mod-tap-equalizer-bw .mod-control-group .mod-knob .mod-knob-image {
-        background-image: url(/resources/tap-equalizer-knob.png?bundle=tap-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
+        background-image: url(/resources/tap-equalizer-knob.png?bundle=tap-lv2-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
         background-position: left center;
         background-repeat: no-repeat;
         background-size: auto 50px;
@@ -292,7 +292,7 @@
     }
     /* FOOTSWITCH */
     .mod-tap-equalizer-bw .mod-footswitch {
-        background-image: url(/resources/footswitch.png?bundle=tap-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
+        background-image: url(/resources/footswitch.png?bundle=tap-lv2-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: auto 55px;
@@ -315,10 +315,10 @@
         z-index: 40;
     }
     .mod-tap-equalizer-bw .mod-light.off {
-        background-image: url(/resources/red-light-off.png?bundle=tap-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
+        background-image: url(/resources/red-light-off.png?bundle=tap-lv2-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
     }
     .mod-tap-equalizer-bw .mod-light.on {
-        background-image: url(/resources/red-light-on.png?bundle=tap-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
+        background-image: url(/resources/red-light-on.png?bundle=tap-lv2-eqbw.lv2&url=http://portalmod.com/plugins/tap/eqbw);
     }
     
 </style>
